--- a/packages/maskbook/src/_locales/ko/messages.json
+++ b/packages/maskbook/src/_locales/ko/messages.json
@@ -97,9 +97,6 @@
     "eanble_or_disable_plugin": "",
     "feedback": "",
     "fingerprint": "",
-    "activity": "",
-    "activity_inbound": "",
-    "activity_outbound": "",
     "buy": "",
     "buy_now": "",
     "setup_guide_optional": "",
@@ -340,6 +337,8 @@
     "plugin_wallet_settings_portfolio_data_source_secondary": "",
     "plugin_wallet_settings_collectible_data_source_primary": "",
     "plugin_wallet_settings_collectible_data_source_secondary": "",
+    "plugin_wallet_fail_to_sign": "",
+    "plugin_wallet_cancel_sign": "",
     "plugin_red_packet_display_name": "",
     "plugin_red_packet_split_mode": "",
     "plugin_red_packet_average": "",
@@ -359,6 +358,12 @@
     "plugin_red_packet_description_empty": "",
     "plugin_red_packet_description_broken": "",
     "plugin_red_packet_description_failover": "",
+    "plugin_red_packet_history_duration": "",
+    "plugin_red_packet_history_total_amount": "",
+    "plugin_red_packet_history_total_claimed_amount": "",
+    "plugin_red_packet_history_claimed": "",
+    "plugin_red_packet_history_split_mode": "",
+    "plugin_red_packet_history_send": "",
     "plugin_gitcoin_readme": "",
     "plugin_gitcoin_readme_fund_link": "",
     "plugin_gitcoin_select_a_token": "",
