chore: tx hash disable button

--- a/packages/maskbook/src/_locales/en/messages.json
+++ b/packages/maskbook/src/_locales/en/messages.json
@@ -347,7 +347,9 @@
     "plugin_red_packet_best_wishes": "Best Wishes!",
     "plugin_red_packet_create_new": "New",
     "plugin_red_packet_claim": "Claim",
+    "plugin_red_packet_claiming": "Claiming...",
     "plugin_red_packet_refund": "Withdraw",
+    "plugin_red_packet_refunding": "Withdrawing...",
     "plugin_red_packet_select_existing": "Past",
     "plugin_red_packet_attached_message": "Attached Message",
     "plugin_red_packet_from": "From: {{name}}",
@@ -476,7 +478,7 @@
     "plugin_ito_begin_time": "Start Time {{zone}}",
     "plugin_ito_wait_unlock_time": "Claim in {{unlockTime}}",
     "plugin_ito_claim": "Claim",
-    "plugin_ito_claiming": "Claiming",
+    "plugin_ito_claiming": "Claiming...",
     "plugin_ito_claim_all": "Claim All",
     "plugin_ito_claimed": "Claimed",
     "plugin_ito_qualification_start_time": "Qualification Start Time:",
