--- a/packages/maskbook/src/_locales/ko/messages.json
+++ b/packages/maskbook/src/_locales/ko/messages.json
@@ -347,7 +347,9 @@
     "plugin_red_packet_best_wishes": "",
     "plugin_red_packet_create_new": "",
     "plugin_red_packet_claim": "",
+    "plugin_red_packet_claiming": "",
     "plugin_red_packet_refund": "",
+    "plugin_red_packet_refunding": "",
     "plugin_red_packet_select_existing": "",
     "plugin_red_packet_attached_message": "",
     "plugin_red_packet_from": "",
