--- a/packages/maskbook/src/_locales/ja/messages.json
+++ b/packages/maskbook/src/_locales/ja/messages.json
@@ -352,7 +352,7 @@
     "plugin_red_packet_refunding": "",
     "plugin_red_packet_select_existing": "既存の投げ銭を選択",
     "plugin_red_packet_attached_message": "メッセージを追加",
-    "plugin_red_packet_from": "送信者: {{name}}",
+    "plugin_red_packet_from": "送信者: @{{name}}",
     "plugin_red_packet_description_claimed": "既に受け取り済みです",
     "plugin_red_packet_description_expired": "期限切れです",
     "plugin_red_packet_description_refunded": "無効です",
